--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+ 
 }
 
 .App-logo {
@@ -25,4 +26,13 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.smurf-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.paragraph {
+  margin-right: 10px;
 }
